<resources>
    <string name="app_name">vicuatui</string>
    <string name="tab_1__section_1__text_left">Số tiền</string>
    <string name="tab_1__section_1__text_right">Chọn mẫu</string>
    <string name="tab_1__section_1__drop_down_hint">Chọn hạng mục</string>
    <string-array name="tab_1__section_1__drop_down">
        <item>Ăn uống</item>
        <item>Dịch vụ sinh hoạt</item>
        <item>Đi lại</item>
        <item>Trang phục</item>
        <item>Nhà cửa</item>
        <item>Hưởng thụ</item>
        <item>Con cái</item>
        <item>Phát triển bản thân</item>
        <item>Sức khỏe</item>
    </string-array>
    <string name="date_picker">datePicker</string>
    <string name="tab_1__section_1_textarea">Diễn giải</string>
    <string name="tab_1__section_1_date">Date</string>
    <string name="tab_1__section_2_button_1">Thêm chi tiết</string>
    <string name="tab_1__section_2_button_2">Ghi</string>
    <!--<string name="tab_1__section_2_button_3">Chụp hóa đơn</string>-->
    <string name="Home">home</string>
    <string name="nav_first">Tổng quan</string>
    <string name="nav_second">Tài Khoản</string>
    <string name="nav_third" />
    <string name="nav_fourth">Hạn mức chi</string>
    <string name="nav_fifth">Cá nhân</string>

    // add new
    <string name="txt_so_tien">Cá nhân</string>
    <string name="txt_dien_giai">Dien dai</string>
    <string name="txt_ngay_thang">Cá nhân</string>

    <string name="success">Thanh cong</string>
    <string-array name="tab_2__search">
        <item>Tất cả</item>
        <item>Hôm nay</item>
        <item>Tháng này</item>
        <item>Năm này</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
