<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment"
    android:weightSum="10"
    android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="4"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:background="@color/backgroundWhite"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/tab_1__section_1__text_left"
                android:textSize="14sp"
                android:textColor="@color/textBlack"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:weightSum="10">

            <EditText
                android:id="@+id/third_fragment__txt_so_tien"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="end"
                android:hint="0"
                android:inputType="number"
                android:textColorHint="@color/textRoman"
                android:textSize="48sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="đ"
                android:layout_weight="1"
                android:textSize="20sp"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:weightSum="4"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/section_1__icon_1"/>

            <Spinner
                android:id="@+id/spinner_hang_muc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:entries="@array/tab_1__section_1__drop_down"
                android:gravity="center_vertical"
                android:prompt="@string/tab_1__section_1__drop_down_hint"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:weightSum="4"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/section_1__icon_2"/>

            <EditText
                android:id="@+id/third_fragment__txt_dien_giai"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/tab_1__section_1_textarea" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">
            <Button
                android:id="@+id/third_fragment__btn_date_picker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tab_1__section_1_date"
                android:onClick="showDatePicker"
                />

            <EditText
                android:id="@+id/third_fragment__txt_ngay_thang"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                tools:text="@tools:sample/date/ddmmyy" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">
            <TextView
                android:id="@+id/third_fragment__txv_add_bill"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/tab_1__section_2_button_3"
                android:textColor="@color/textPictonBlue" />

            <ImageView
                android:id="@+id/third_fragment__img_bill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <Button
            android:id="@+id/third_fragment__btn_ghi"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/textPictonBlue"
            android:text="@string/tab_1__section_2_button_2"
            android:textColor="@color/textWhite" />
    </LinearLayout>

</LinearLayout>